[package]
name = "abs"
version = "1.1.1"
edition = "2024"
license = "CC-BY-4.0"

[[bin]]
name = "abs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
