[workspace]
members = [".", "absgui"]
default-members = [".", "absgui"]
resolver = "2"

[package]
name = "abs"
version = "1.3.7"
edition = "2024"
license = "CC-BY-4.0"

[[bin]]
name = "abs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
colored = "3.1.1"
dirs = "6.0.0"
libc = "0.2"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
