[package]
name = "absgui"
version = "1.3.3"
edition = "2021"
license = "CC-BY-4.0"
description = "GUI for ABS — Arch/CachyOS package builder"
build = "build.rs"

[[bin]]
name = "absgui"
path = "src/main.rs"

[dependencies]
dirs = "6.0.0"
bytes = "1"
libc = "0.2"
rfd = "0.15"
iced = { version = "0.13.1", features = ["tokio", "image"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
