[package]
name = "absgui"
version = "1.3.4"
edition = "2021"
license = "CC-BY-4.0"
description = "GUI for ABS — Arch/CachyOS package builder"
build = "build.rs"

[[bin]]
name = "absgui"
path = "src/main.rs"

[dependencies]
dirs = "6.0.0"
bytes = "1"
libc = "0.2"
rfd = "0.17"
iced = { version = "0.14.0", features = ["tokio", "image"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1"
